--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "admin-frontend",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
-    "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-data-table-component": "^7.5.3",
-    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.1",
@@ -21,31 +25,16 @@
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.7.3",
-    "web-vitals": "^2.1.4"
+    "sweetalert2": "^11.7.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "vite": "^4.4.5"
   }
 }
