--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-image-zooom": "^1.2.0",
     "react-redux": "^8.1.2",
     "react-slick": "^0.29.0",
     "recharts": "^2.6.2",
