--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "eslint-config-next": "^13.4.19",
     "next": "^13.4.19",
-    "nextjs-progressbar": "^0.0.16",
+    "nextjs-toploader": "^1.5.3",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
@@ -21,6 +21,7 @@
     "react-image-zooom": "^1.2.0",
     "react-redux": "^8.1.2",
     "react-slick": "^0.29.0",
+    "react-to-print": "^2.14.15",
     "recharts": "^2.6.2",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.5"
